erDiagram
    users ||--o{ articles : "创作"
    users ||--o{ comments : "评论"
    users ||--o{ user_likes : "点赞操作"
    users ||--o{ user_favorites : "收藏操作"
    articles ||--o{ comments : "包含"
    articles ||--o{ user_likes : "被点赞"
    articles ||--o{ user_favorites : "被收藏"
    comments ||--o{ comment_likes : "被点赞"
    users ||--o{ comment_likes : "点赞评论"

    user_likes {
        bigint id PK
        bigint user_id FK
        bigint article_id FK
        datetime create_time
    }

    user_favorites {
        bigint id PK
        bigint user_id FK
        bigint article_id FK
        datetime create_time
    }

    comment_likes {
        bigint id PK
        bigint user_id FK
        bigint comment_id FK
        datetime create_time
    }
